--- a/src/main/webapp/app/entities/authentic-key/authentic-key-update.component.html
+++ b/src/main/webapp/app/entities/authentic-key/authentic-key-update.component.html
@@ -4,27 +4,27 @@
             <h2 id="jhi-authentic-key-heading">Create or edit a Authentic Key</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
-                <div class="form-group" [hidden]="!authenticKey.id">
+                <div class="form-group" [hidden]="true">
                     <label for="id">ID</label>
                     <input type="text" class="form-control" id="id" name="id"
                         [(ngModel)]="authenticKey.id" readonly />
                 </div>
-                <div class="form-group">
+                <div class="form-group" [hidden]="true">
                     <label class="form-control-label" for="field_uniqueKey">Unique Key</label>
                     <input type="number" class="form-control" name="uniqueKey" id="field_uniqueKey"
                         [(ngModel)]="authenticKey.uniqueKey" />
                 </div>
-                <div class="form-group">
+                <div class="form-group" [hidden]="true">
                     <label class="form-control-label" for="field_productId">Product Id</label>
                     <input type="number" class="form-control" name="productId" id="field_productId"
                         [(ngModel)]="authenticKey.productId" />
                 </div>
-                <div class="form-group">
+                <div class="form-group" [hidden]="true">
                     <label class="form-control-label" for="field_assignmentStatus">Assignment Status</label>
                     <input type="checkbox" class="form-control" name="assignmentStatus" id="field_assignmentStatus"
                         [(ngModel)]="authenticKey.assignmentStatus" />
                 </div>
-                <div class="form-group">
+                <div class="form-group" [hidden]="true">
                     <label class="form-control-label" for="field_validStatus">Valid Status</label>
                     <input type="checkbox" class="form-control" name="validStatus" id="field_validStatus"
                         [(ngModel)]="authenticKey.validStatus" />
