--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -3,15 +3,14 @@
         <span class="hipster img-fluid rounded"></span>
     </div>
     <div class="col-md-9">
-        <h1 class="display-4">Welcome, Java Hipster!</h1>
-        <p class="lead">This is your homepage</p>
+        <h1 class="display-4">Welcome, Authenticity!</h1>
+        <p class="lead">Is Your Product Authentic?</p>
 
         <div [ngSwitch]="isAuthenticated()">
             <div class="alert alert-success" *ngSwitchCase="true">
                 <span id="home-logged-message" *ngIf="account"
                    > You are logged in as user "{{account.login}}". </span>
             </div>
-
             <div class="alert alert-warning" *ngSwitchCase="false">
                 <span>If you want to </span>
                 <a class="alert-link" (click)="login()">sign in</a><span>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
@@ -19,6 +18,16 @@
             <div class="alert alert-warning" *ngSwitchCase="false">
                 <span>You don't have an account yet?</span>&nbsp;
                 <a class="alert-link" routerLink="register">Register a new account</a>
+            </div>
+            <div class="col-md-12" *ngSwitchCase="false">
+                <span>Is Your Product Authentic ? Please Enter Secret Key Below To Check.</span>&nbsp;
+                <a class="alert-link" routerLink="register">Register a new account</a>
+                <form>
+                <div class="form-group">
+                    <input class="form-control" type="number" name="searchId" placeholder="Enter Your Secret Key Below" [(ngModel)]="secretKey">
+                </div>
+                <button class="btn btn-primary" (click)="checkAuthentic()"> Submit </button>
+                </form>
             </div>
         </div>
 
@@ -28,7 +37,7 @@
 
         <ul>
             <li><a href="https://www.jhipster.tech/" target="_blank" rel="noopener">JHipster homepage</a></li>
-            <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener">JHipster on Stack Overflow</a></li>
+            <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener">Authticity on Facebook</a></li>
             <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" rel="noopener">JHipster bug tracker</a></li>
             <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener">JHipster public chat room</a></li>
             <li><a href="https://twitter.com/java_hipster" target="_blank" rel="noopener">follow @java_hipster on Twitter</a></li>
