Check Authenticity Add

--- a/src/main/webapp/app/entities/authentic-key/authentic-key-detail.component.html
+++ b/src/main/webapp/app/entities/authentic-key/authentic-key-detail.component.html
@@ -37,7 +37,7 @@
 
             <button type="button"
                     [routerLink]="['/authentic-key', authenticKey.id, 'edit']"
-                    class="btn btn-primary">
+                    class="btn btn-primary" disabled>
                 <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span> Edit</span>
             </button>
         </div>
