--- a/src/main/webapp/app/entities/authentic-key/authentic-key.component.html
+++ b/src/main/webapp/app/entities/authentic-key/authentic-key.component.html
@@ -45,7 +45,7 @@
                         </button>
                         <button type="submit"
                                 [routerLink]="['/authentic-key', authenticKey.id, 'edit']"
-                                class="btn btn-primary btn-sm">
+                                class="btn btn-primary btn-sm" disabled>
                             <fa-icon [icon]="'pencil-alt'"></fa-icon>
                             <span class="d-none d-md-inline">Edit</span>
                         </button>
