--- a/src/main/webapp/app/entities/product-details/product-details-update.component.html
+++ b/src/main/webapp/app/entities/product-details/product-details-update.component.html
@@ -15,22 +15,22 @@
                         [(ngModel)]="productDetails.productName" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_manuId">Manu Id</label>
+                    <label class="form-control-label" for="field_manuId">Manufacturer Id</label>
                     <input type="number" class="form-control" name="manuId" id="field_manuId"
-                        [(ngModel)]="productDetails.manuId" />
+                        [(ngModel)]="productDetails.manuId" readonly />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_manuName">Manu Name</label>
+                    <label class="form-control-label" for="field_manuName">Manufacturer Name</label>
                     <input type="text" class="form-control" name="manuName" id="field_manuName"
-                        [(ngModel)]="productDetails.manuName" />
+                        [(ngModel)]="productDetails.manuName" disabled />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_productId">Product Id</label>
                     <input type="number" class="form-control" name="productId" id="field_productId"
-                        [(ngModel)]="productDetails.productId" />
+                        [(ngModel)]="productDetails.productId" [disabled] ="productDetails.productId" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_productManuDate">Product Manu Date</label>
+                    <label class="form-control-label" for="field_productManuDate">Product Manufacturing Date</label>
                     <div class="input-group">
                         <input id="field_productManuDate" type="text" class="form-control" name="productManuDate" ngbDatepicker  #productManuDateDp="ngbDatepicker" [(ngModel)]="productDetails.productManuDate"
                         />
