--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -19,18 +19,25 @@
                 <span>You don't have an account yet?</span>&nbsp;
                 <a class="alert-link" routerLink="register">Register a new account</a>
             </div>
-            <div class="col-md-12" *ngSwitchCase="false">
+            <div class="col-md-12" *ngSwitchCase="true">
                 <span>Is Your Product Authentic ? Please Enter Secret Key Below To Check.</span>&nbsp;
-                <a class="alert-link" routerLink="register">Register a new account</a>
                 <form>
                 <div class="form-group">
                     <input class="form-control" type="number" name="searchId" placeholder="Enter Your Secret Key Below" [(ngModel)]="secretKey">
                 </div>
                 <button class="btn btn-primary" (click)="checkAuthentic()"> Submit </button>
                 </form>
+               
             </div>
         </div>
-
+        <div class="col-md-12" *ngIf="responseData">
+            <br>
+            <br>
+            <span class="alert alert-success" *ngIf="responseData.isValid; else invalid">{{secretKey}} is Authentic.</span>
+            <ng-template #invalid><span class="alert alert-danger">{{secretKey}} is not Authentic.</span></ng-template>
+            <br>
+            <br>
+        </div>
         <p>
             If you have any question on JHipster:
         </p>
