--- a/src/main/webapp/app/entities/product-details/product-details-update.component.html
+++ b/src/main/webapp/app/entities/product-details/product-details-update.component.html
@@ -14,12 +14,12 @@
                     <input type="text" class="form-control" name="productName" id="field_productName"
                         [(ngModel)]="productDetails.productName" />
                 </div>
-                <div class="form-group">
+                <div class="form-group" [hidden]="!productDetails.manuId">
                     <label class="form-control-label" for="field_manuId">Manufacturer Id</label>
                     <input type="number" class="form-control" name="manuId" id="field_manuId"
                         [(ngModel)]="productDetails.manuId" readonly />
                 </div>
-                <div class="form-group">
+                <div class="form-group" [hidden]="!productDetails.manuName">
                     <label class="form-control-label" for="field_manuName">Manufacturer Name</label>
                     <input type="text" class="form-control" name="manuName" id="field_manuName"
                         [(ngModel)]="productDetails.manuName" disabled />
@@ -27,7 +27,7 @@
                 <div class="form-group">
                     <label class="form-control-label" for="field_productId">Product Id</label>
                     <input type="number" class="form-control" name="productId" id="field_productId"
-                        [(ngModel)]="productDetails.productId" [disabled] ="productDetails.productId" />
+                        [(ngModel)]="productDetails.productId" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_productManuDate">Product Manufacturing Date</label>
